Fixed overflow issue on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,9 @@
 body {
     margin: 0;
     background-color: $bgColor;
+}
+
+.appComponent {
     overflow-x: hidden;
 }
 
